<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/detail_header_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/detail_meal_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/detail_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="45dp"
            android:text="@string/tv_meal_title"
            android:textSize="24sp" />
    </LinearLayout>
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/detail_desc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Holder"
                    android:layout_gravity="start"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/detail_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>
            </LinearLayout>

            <TextView
                android:id="@+id/detail_list_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_calories"/>
                    <TextView
                        android:id="@+id/detail_calories_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:paddingTop="16dp"
                        android:layout_gravity="end"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_protein"/>
                    <TextView
                        android:id="@+id/detail_protein_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:layout_gravity="end"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_carbohydrates"/>
                    <TextView
                        android:id="@+id/detail_carbohydrates_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_sugar"/>
                    <TextView
                        android:id="@+id/detail_sugar_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_fat"/>
                    <TextView
                        android:id="@+id/detail_fat_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_transfat"/>
                    <TextView
                        android:id="@+id/detail_transfat_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_saturatefat"/>
                    <TextView
                        android:id="@+id/detail_saturatedfat_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_sodium"/>
                    <TextView
                        android:id="@+id/detail_sodium_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_cholesterol"/>
                    <TextView
                        android:id="@+id/detail_cholesterol_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_calcium"/>
                    <TextView
                        android:id="@+id/detail_calcium_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:text="@string/display_create_iron"/>
                    <TextView
                        android:id="@+id/detail_iron_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:padding="16dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>